[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/MiniGames/CutDefuser.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartDialog" type="AcceptDialog" parent="Control"]
visible = true
anchor_left = 0.534
anchor_top = 0.546
anchor_right = 0.534
anchor_bottom = 0.546
margin_left = -290.61
margin_top = -151.1
margin_right = -140.61
margin_bottom = -51.1002
rect_scale = Vector2( 3, 3 )
popup_exclusive = true
window_title = "Hurry!"
dialog_text = "Let's start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletedDialog" type="AcceptDialog" parent="Control"]
visible = true
anchor_left = 0.534
anchor_top = 0.546
anchor_right = 0.534
anchor_bottom = 0.546
margin_left = -290.61
margin_top = -151.1
margin_right = -140.61
margin_bottom = -51.1002
rect_scale = Vector2( 3, 3 )
popup_exclusive = true
window_title = "Completed!"
dialog_text = "Good Job!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="Control/StartDialog" to="." method="_on_StartDialog_confirmed"]
